added deleteObjectives
